# congrads

./: .gitignore  README.md  constraints-min.txt  pyproject.toml
congrads/: constraints.py
docs/: api.rst  concepts.rst  conf.py  examples.rst  index.rst  requirements.in  requirements.txt  start.rst
docs/_static/: Meire2023.bib  Meire2025.bib  Rombouts2025.bib  Tefera2025.bib  VanBaelen2023.bib
docs/examples/: MonotonicHealthScore.ipynb  MonotonicHealthScore.rst  SimpleMonotonicity.ipynb  SimpleMonotonicity.rst  SyntheticClusters.ipynb  SyntheticClusters.rst
examples/BiasCorrection/: main.py
examples/FamilyIncome/: main.py
examples/MonotonicHealthScore/: main.py  plot.py  util.py
examples/SimpleMonotonicity/: main.py  plot.py
examples/SyntheticClusters/: main.py  plot.py  util.py
public/: .buildinfo  api.html  concepts.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  start.html
src/congrads/: checkpoints.py  descriptor.py  metrics.py
src/congrads/callbacks/: base.py  registry.py
src/congrads/constraints/: base.py  registry.py
src/congrads/core/: batch_runner.py  congradscore.py  constraint_engine.py  epoch_runner.py
src/congrads/datasets/: registry.py
src/congrads/networks/: registry.py
src/congrads/transformations/: base.py  registry.py
src/congrads/utils/: preprocessors.py  utility.py  validation.py
tests/: test_checkpoints.py  test_constraints.py  test_descriptor.py  test_examples.py  test_metrics.py  test_networks.py  test_transformations.py  test_utils.py
tests/callbacks/: test_base.py
tests/constraints/: test_registry.py
tests/core/: test_batch_runner.py  test_congradscore.py  test_constraint_engine.py  test_epoch_runner.py
tests/utils/: test_utility.py  test_validation.py
